<resources>
    <string name="app_name">ChatUp</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login_">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">SIGN IN</string>
    <string name="title_activity_signup_">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure all the fields i.e username,password,email is filled properly.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error_message">Check your username and password properly</string>
    <string name="menu_logout_label">Logout</string>
    <string name="no_msg_label">No new messages!</string>
    <string name="add_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We are sorry !</string>
    <string name="action_camera_label">Camera</string>
    <string name="error_string_storage">Found Error while accessing storage.</string>
    <string name="error_storage_message">Problem Found While Accessing The External Storage</string>
    <string name="general_error">Error Found!</string>
    <string name="video_limit">Select a video that is less then 10 MB</string>
    <string name="selsected_file_error">Their was a problem with the selected file.</string>
    <string name="greater_file_size">File Size is greater then 10 MB</string>
    <string name="title_activity_recipient">Choose Friends</string>
    <string name="choose_friends">Choose Some Friends</string>
    <string name="action_send_label">Send</string>
    <string name="app_title">ChatUp</string>
    <string name="error_selecting_file">Their was an error selection the file. Please select another file</string>
    <string name="error_selecting_file_title">We are very sorry</string>
    <string name="success_message_sent">Message Sent</string>
    <string name="error_sending_message_title">Oops!</string>
    <string name="error_sending_message">Their was an error sending the message</string>
    <string name="title_activity_view_image">View</string>
    <string name="create_account_label">Don\'t have an account? Sign Up!</string>
    <string name="app_sub_title">Self Distruction Chat App</string>
    <string name="content_desc_user_avatar">User Avatar</string>
    <string name="content_desc_user_checkmark">User Checkmark</string>
</resources>
