<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_edit_friends"
        android:orderInCategory="100"
        android:title="@string/menu_edit_friends"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_camera"
        android:title="@string/action_camera_label"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_camera"
        app:showAsAction="always"/>

</menu>
