<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="app.delchat.heaven.zion.delchat.Signup_Activity"
                style="@style/AuthBackground">
    <ImageView
        android:id="@+id/imageView"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subTitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

    <EditText
        style="@style/AuthEditText"
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"/>

    <EditText
        style="@style/AuthEditText"
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"/>

    <EditText
        style="@style/AuthEditText"
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"/>
    </LinearLayout>

    <Button
        android:text="Sign Up"
        android:id="@+id/signup_button"
        style="@style/AuthSubmitButton"/>
</RelativeLayout>
